fix blurry text and pixelated images
- switch: --use-angle=gl (OpenGL, see
  https://support.google.com/chrome/thread/151235035/some-images-in-google-chrome-are-pixelated?hl=en)
- remove the css' 'will-change:transform' which is what caused blur,
  even though it unpixelated the image...

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -211,9 +211,8 @@
 
 #collection .fanart,
 #trakt .fanart {
-  background-size: contain;
+  background-size: cover;
   overflow: hidden;
-  will-change: transform;
   position: relative;
 }
 
